samples/_failures_safe/1761162151_a1ed3f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_81a9ffcf.c: In function ‘tokenize’:
./samples/SAFE/__tmp_81a9ffcf.c:168:5: error: expected declaration or statement at end of input
  168 |     }
      |     ^
